--- a/src/components/CoursCard/CoursCard.css
+++ b/src/components/CoursCard/CoursCard.css
@@ -1,5 +1,7 @@
 .CoursCard-block {
     background-color: #252B42;
-    padding: 20px; /* Внутренний отступ для блока с карточками */
+    padding: 20px;
+    height: 100%;
+    width: 100%; /* Внутренний отступ для блока с карточками */
     /*margin-top: 20px; /* Отступ сверху */
   }
