--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
 body {
-    background-color: #f8f9fa; /* Цвет светлого фона */
+    background-color: red; /* Цвет светлого фона */
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
   }
+
+  
