--- a/src/components/Cards/Card.css
+++ b/src/components/Cards/Card.css
@@ -7,3 +7,8 @@
   /*padding: 20px; /* Внутренний отступ для блока с карточками */
   /*margin-top: 20px; /* Отступ сверху */
 }
+
+.card-effect:hover {
+  transform: scale(1.1); /* Puedes ajustar el valor para cambiar la intensidad del efecto */
+  transition: transform 0.3s ease; /* Agrega una transición suave */
+}
