--- a/src/components/CoursCard/CoursCard.css
+++ b/src/components/CoursCard/CoursCard.css
@@ -3,3 +3,10 @@
     padding: 20px; /* Внутренний отступ для блока с карточками */
     /*margin-top: 20px; /* Отступ сверху */
   }
+
+  .pl-3 mb-3 mt-3{
+    color: white;
+  }
+
+
+ 
