--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,4 +1,4 @@
 .navbar-light .navbar-nav .nav-link {
-    color: white; /* Изменение цвета текста на белый */
+    color: rgb(133, 133, 133); /* Изменение цвета текста на белый */
   }
   
