--- a/src/components/SongsCard/SongsCard.css
+++ b/src/components/SongsCard/SongsCard.css
@@ -1,5 +1,4 @@
 .CoursCard-block {
-    background-color: #252B42;
+    background-color: #727377;
     padding: 20px; /* Внутренний отступ для блока с карточками */
-    /*margin-top: 20px; /* Отступ сверху */
   }
